--- a/StarTrivia/Base.lproj/Main.storyboard
+++ b/StarTrivia/Base.lproj/Main.storyboard
@@ -187,6 +187,67 @@
                                     <action selector="randomClicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="j8j-Xi-R8O"/>
                                 </connections>
                             </button>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7HF-Wp-qRP" customClass="BlackBgView" customModule="StarTrivia" customModuleProvider="target">
+                                <rect key="frame" x="20" y="589.5" width="374" height="75"/>
+                                <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" spacing="31" translatesAutoresizingMaskIntoConstraints="NO" id="Uea-r9-IIF">
+                                        <rect key="frame" x="20" y="20" width="334" height="35"/>
+                                        <subviews>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WBA-uo-PwZ">
+                                                <rect key="frame" x="0.0" y="0.0" width="35" height="35"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" constant="35" id="093-kY-oER"/>
+                                                    <constraint firstAttribute="height" constant="35" id="9b8-aw-KqL"/>
+                                                </constraints>
+                                                <state key="normal" image="homeworld_icon"/>
+                                                <connections>
+                                                    <action selector="homeworldClicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="xb4-0E-gxC"/>
+                                                </connections>
+                                            </button>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="djh-QA-ZmA">
+                                                <rect key="frame" x="99.5" y="0.0" width="35" height="35"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="35" id="TDF-FG-ibl"/>
+                                                    <constraint firstAttribute="width" constant="35" id="ZF7-X2-uCC"/>
+                                                </constraints>
+                                                <state key="normal" image="vehicles"/>
+                                                <connections>
+                                                    <action selector="vehiclesClicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Yta-0V-ATm"/>
+                                                </connections>
+                                            </button>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QgS-xt-SA9">
+                                                <rect key="frame" x="199.5" y="0.0" width="35" height="35"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" constant="35" id="P3b-Kg-gCw"/>
+                                                    <constraint firstAttribute="height" constant="35" id="S1m-cH-Iw8"/>
+                                                </constraints>
+                                                <state key="normal" image="starships"/>
+                                                <connections>
+                                                    <action selector="starshipsClicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="J9O-SD-PB1"/>
+                                                </connections>
+                                            </button>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Auy-Fx-s6D">
+                                                <rect key="frame" x="299" y="0.0" width="35" height="35"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" constant="35" id="DEs-LL-1FR"/>
+                                                    <constraint firstAttribute="height" constant="35" id="yfQ-HD-GEQ"/>
+                                                </constraints>
+                                                <state key="normal" image="films"/>
+                                                <connections>
+                                                    <action selector="filmsClicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="0oP-im-NCR"/>
+                                                </connections>
+                                            </button>
+                                        </subviews>
+                                    </stackView>
+                                </subviews>
+                                <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.59762874119999998" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="Uea-r9-IIF" secondAttribute="trailing" constant="20" id="UDF-eu-YPf"/>
+                                    <constraint firstAttribute="height" constant="75" id="rhK-Fw-sKt"/>
+                                    <constraint firstItem="Uea-r9-IIF" firstAttribute="centerY" secondItem="7HF-Wp-qRP" secondAttribute="centerY" id="vvc-y9-ZEl"/>
+                                    <constraint firstItem="Uea-r9-IIF" firstAttribute="leading" secondItem="7HF-Wp-qRP" secondAttribute="leading" constant="20" id="xqH-Fr-vfV"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
@@ -198,21 +259,28 @@
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="iMc-rh-REj" secondAttribute="trailing" constant="20" id="OvR-nr-bBU"/>
                             <constraint firstItem="1iu-dP-dtG" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="QtT-sb-O5S"/>
                             <constraint firstItem="iMc-rh-REj" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="Yix-4W-hS2"/>
+                            <constraint firstItem="7HF-Wp-qRP" firstAttribute="width" secondItem="iMc-rh-REj" secondAttribute="width" id="c42-Fq-gRP"/>
                             <constraint firstItem="iMc-rh-REj" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="koe-wU-Khj"/>
                             <constraint firstAttribute="bottomMargin" secondItem="v9E-4m-byj" secondAttribute="bottom" constant="20" id="rMF-As-VgK"/>
                             <constraint firstItem="Tk4-Ab-l9P" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="tNE-7A-muv"/>
+                            <constraint firstItem="7HF-Wp-qRP" firstAttribute="top" secondItem="iMc-rh-REj" secondAttribute="bottom" constant="14" id="uUP-XI-2l4"/>
                             <constraint firstItem="1iu-dP-dtG" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="20" id="yjA-6t-RfD"/>
+                            <constraint firstItem="7HF-Wp-qRP" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="zx2-SS-x9A"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <navigationItem key="navigationItem" id="2uL-2F-3Cd"/>
                     <connections>
                         <outlet property="birthYearLbl" destination="w6P-n1-hT5" id="3sB-yk-KqV"/>
+                        <outlet property="filmBtn" destination="Auy-Fx-s6D" id="cKd-QR-0Pv"/>
                         <outlet property="genderLbl" destination="20w-gJ-8t9" id="sRQ-NO-TgH"/>
                         <outlet property="hairLbl" destination="3T5-Nc-KbL" id="yUl-7y-wsH"/>
                         <outlet property="heigthLbl" destination="IDV-lo-UHl" id="efK-3L-1ZL"/>
+                        <outlet property="homeworldBtn" destination="WBA-uo-PwZ" id="Vwr-Hi-TbT"/>
                         <outlet property="massLbl" destination="ebQ-Cc-3X0" id="yeu-be-f2o"/>
                         <outlet property="nameLbl" destination="HZD-vh-eXw" id="XvA-k2-C7M"/>
+                        <outlet property="starshipsBtn" destination="QgS-xt-SA9" id="Io1-RK-LxL"/>
+                        <outlet property="vehiclesBtn" destination="djh-QA-ZmA" id="FR0-L0-ZEd"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -239,6 +307,10 @@
         </scene>
     </scenes>
     <resources>
+        <image name="films" width="50" height="50"/>
+        <image name="homeworld_icon" width="50" height="50"/>
         <image name="space1" width="699" height="1120"/>
+        <image name="starships" width="50" height="50"/>
+        <image name="vehicles" width="50" height="50"/>
     </resources>
 </document>
