--- a/StarTrivia/Base.lproj/Main.storyboard
+++ b/StarTrivia/Base.lproj/Main.storyboard
@@ -202,6 +202,7 @@
                                                 <state key="normal" image="homeworld_icon"/>
                                                 <connections>
                                                     <action selector="homeworldClicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="xb4-0E-gxC"/>
+                                                    <segue destination="BPY-6s-dDp" kind="show" identifier="toHomeworld" id="yQq-gK-aBX"/>
                                                 </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="djh-QA-ZmA" customClass="FadeEnabledBtn" customModule="StarTrivia" customModuleProvider="target">
@@ -213,6 +214,7 @@
                                                 <state key="normal" image="vehicles"/>
                                                 <connections>
                                                     <action selector="vehiclesClicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Yta-0V-ATm"/>
+                                                    <segue destination="DPz-th-DLy" kind="show" identifier="toVehicles" id="bfB-T6-xlV"/>
                                                 </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QgS-xt-SA9" customClass="FadeEnabledBtn" customModule="StarTrivia" customModuleProvider="target">
@@ -224,6 +226,7 @@
                                                 <state key="normal" image="starships"/>
                                                 <connections>
                                                     <action selector="starshipsClicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="J9O-SD-PB1"/>
+                                                    <segue destination="uTH-Kv-P9d" kind="show" identifier="toStarships" id="QCr-iF-0p5"/>
                                                 </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Auy-Fx-s6D" customClass="FadeEnabledBtn" customModule="StarTrivia" customModuleProvider="target">
@@ -235,6 +238,7 @@
                                                 <state key="normal" image="films"/>
                                                 <connections>
                                                     <action selector="filmsClicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="0oP-im-NCR"/>
+                                                    <segue destination="Awz-XV-T6o" kind="show" identifier="toFilms" id="Bes-vc-G98"/>
                                                 </connections>
                                             </button>
                                         </subviews>
@@ -287,6 +291,110 @@
             </objects>
             <point key="canvasLocation" x="1076.8115942028987" y="114.50892857142857"/>
         </scene>
+        <!--HomeworldVC-->
+        <scene sceneID="dDi-Kc-kLf">
+            <objects>
+                <viewController id="BPY-6s-dDp" customClass="HomeworldVC" customModule="StarTrivia" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="GZf-gQ-k7c">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="homeworld" translatesAutoresizingMaskIntoConstraints="NO" id="aYT-Oe-NZ2">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="aYT-Oe-NZ2" firstAttribute="leading" secondItem="FiT-VA-iiQ" secondAttribute="leading" id="A9R-bR-h4Z"/>
+                            <constraint firstItem="aYT-Oe-NZ2" firstAttribute="top" secondItem="GZf-gQ-k7c" secondAttribute="top" id="IdG-Pj-8fU"/>
+                            <constraint firstItem="FiT-VA-iiQ" firstAttribute="trailing" secondItem="aYT-Oe-NZ2" secondAttribute="trailing" id="NV5-el-hKd"/>
+                            <constraint firstAttribute="bottom" secondItem="aYT-Oe-NZ2" secondAttribute="bottom" id="tC9-9e-5G5"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="FiT-VA-iiQ"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="t36-DK-8KG" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1771" y="-174"/>
+        </scene>
+        <!--VehiclesVC-->
+        <scene sceneID="eL9-tN-cBo">
+            <objects>
+                <viewController id="DPz-th-DLy" customClass="VehiclesVC" customModule="StarTrivia" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="BpH-9X-TJ0">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="space3" translatesAutoresizingMaskIntoConstraints="NO" id="ujB-Se-H0g">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="ujB-Se-H0g" firstAttribute="leading" secondItem="UL2-Wk-mC3" secondAttribute="leading" id="O5g-KI-w9Z"/>
+                            <constraint firstItem="ujB-Se-H0g" firstAttribute="top" secondItem="BpH-9X-TJ0" secondAttribute="top" id="TaQ-5I-50x"/>
+                            <constraint firstAttribute="bottom" secondItem="ujB-Se-H0g" secondAttribute="bottom" id="j9H-nH-qdE"/>
+                            <constraint firstItem="UL2-Wk-mC3" firstAttribute="trailing" secondItem="ujB-Se-H0g" secondAttribute="trailing" id="nKt-h6-nBI"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="UL2-Wk-mC3"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="c3G-19-TUo" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2529" y="-174"/>
+        </scene>
+        <!--FilmsVC-->
+        <scene sceneID="d5w-fd-nqk">
+            <objects>
+                <viewController id="Awz-XV-T6o" customClass="FilmsVC" customModule="StarTrivia" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Sme-fW-JKh">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="space2" translatesAutoresizingMaskIntoConstraints="NO" id="Qwd-1S-xVA">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="Lfv-B1-SIU" firstAttribute="trailing" secondItem="Qwd-1S-xVA" secondAttribute="trailing" id="UcY-cI-bTi"/>
+                            <constraint firstItem="Qwd-1S-xVA" firstAttribute="top" secondItem="Sme-fW-JKh" secondAttribute="top" id="bom-DH-xEx"/>
+                            <constraint firstItem="Qwd-1S-xVA" firstAttribute="leading" secondItem="Lfv-B1-SIU" secondAttribute="leading" id="hbk-h0-srJ"/>
+                            <constraint firstAttribute="bottom" secondItem="Qwd-1S-xVA" secondAttribute="bottom" id="q5o-d7-GSZ"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="Lfv-B1-SIU"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="wK9-Oh-5L7" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2529" y="1142"/>
+        </scene>
+        <!--StarshipsVC-->
+        <scene sceneID="6EA-Sw-LHX">
+            <objects>
+                <viewController id="uTH-Kv-P9d" customClass="StarshipsVC" customModule="StarTrivia" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="0B6-cr-gfI">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="space4" translatesAutoresizingMaskIntoConstraints="NO" id="q8P-f8-qd4">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstAttribute="bottom" secondItem="q8P-f8-qd4" secondAttribute="bottom" id="Txm-9b-R0F"/>
+                            <constraint firstItem="LKZ-H6-90S" firstAttribute="trailing" secondItem="q8P-f8-qd4" secondAttribute="trailing" id="VDv-js-col"/>
+                            <constraint firstItem="q8P-f8-qd4" firstAttribute="leading" secondItem="LKZ-H6-90S" secondAttribute="leading" id="gx3-9y-56c"/>
+                            <constraint firstItem="q8P-f8-qd4" firstAttribute="top" secondItem="0B6-cr-gfI" secondAttribute="top" id="ibb-D1-JhZ"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="LKZ-H6-90S"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="JRt-xe-CTD" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2529" y="481"/>
+        </scene>
         <!--Navigation Controller-->
         <scene sceneID="4J3-Ix-2AI">
             <objects>
@@ -308,8 +416,12 @@
     </scenes>
     <resources>
         <image name="films" width="50" height="50"/>
+        <image name="homeworld" width="460" height="864"/>
         <image name="homeworld_icon" width="50" height="50"/>
         <image name="space1" width="699" height="1120"/>
+        <image name="space2" width="329" height="610"/>
+        <image name="space3" width="470" height="877"/>
+        <image name="space4" width="278" height="488"/>
         <image name="starships" width="50" height="50"/>
         <image name="vehicles" width="50" height="50"/>
     </resources>
